# oska

./: CMakeLists.txt
include/: channel.hpp  oska_events.hpp
test/: testEvents.cpp
tests/: channel_test.cpp  move_copy_test.cpp  test_events.cpp  test_events_with_channel.cpp
